[tool.poetry]
name = "swpt_debtors"
version = "0.1.0"
description = "Swaptacular micro-service that manages debtors"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "*"
python-json-logger = "^2.0.4"
flask = "^2.1.3"
flask-cors = "^3.0.9"
flask-sqlalchemy = "^2.5.1"
flask-migrate = "^3.1.0"
flask-smorest = "^0.39.0"
psycopg2-binary = "^2.8"
pika = "^1.3"
sqlalchemy = "^1.4.39"
alembic = "^1.8.1"
marshmallow = "^3.17.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.8.3"}
pytest = "^4.0"
pytest-mock = "^1.10"

[tool.poetry.dev-dependencies]
pudb = "*"
web-pdb = "*"
python-dotenv = ">=0.10.1"
flake8 = "^3.7"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.4.0"
pytest-cov = "^2.7"
mypy = "^0.961"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
